Customzier: Prevent Font Select Overlap

--- a/css/control/font-control.scss
+++ b/css/control/font-control.scss
@@ -32,6 +32,7 @@
 	}
 
 	.chosen-container {
+		max-width: 100%;
 		width: 100%;
 	}
 
